--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,11 +18,11 @@
 
 @layer components {
   .btn-primary {
-    @apply bg-transparent filter backdrop-blur-md border border-wpurple hover:bg-wpurple transition rounded-full font-medium hover:transform hover:scale-105;
+    @apply bg-transparent filter backdrop-blur-md border border-wpurple hover:bg-wpurple transition rounded-lg font-medium hover:transform hover:scale-105;
   }
 
   .btn-secondary {
-    @apply bg-transparent filter backdrop-blur-md border border-zinc-800 hover:bg-wgreen hover:text-black transition rounded-full font-medium hover:transform hover:scale-105;
+    @apply bg-transparent filter backdrop-blur-md  bg-wgreen text-black hover:bg-wgreen hover:text-black transition rounded-lg font-medium hover:transform hover:scale-105;
   }
 
   .btn-lg {
